Razor (v1.0.13.*) Changelog:
* Corrected an issue with the automatic door opening feature.
* Modernized the welcome screen default server list.