@@ -1,3 +1,6 @@
 Razor (v1.0.13.*) Changelog:
+* Resolve 7.0.33.1 issues.
+* Several minor UI tweaks
+
 * Corrected an issue with the automatic door opening feature.
 * Modernized the welcome screen default server list.
